# attestation-verification-service

./: .bazelignore  .bazelrc  .gitignore  .gitlint  .pre-commit-config.yaml  .rustfmt.toml  BUILD  CHANGELOG.md  GEMINI.md  MODULE.bazel  README.md  buf.yaml  cargo-bazel-lock.json  checksums.txt  devkit.json  oak-cargo-bazel-lock.json  oak-cargo-no-std-bazel-lock.json  oak-cargo-no-std-no-avx-bazel-lock.json
.devkit/: CHANGELOG.md
.devkit/devkit/: check_checksums
.devkit/docs/help/: check_checksums.txt
.devkit/images/: build-env.Dockerfile  dev-env.Dockerfile  vscode-ide.Dockerfile
.devkit/scripts/: docker_run.py  test_docker_run.py
.devkit/tools/ci/utils/: test_devkit_check_checksums.sh
.github/workflows/: build.yaml  coverage.yaml  pre-commit.yaml  test.yaml
avs_server/: BUILD
avs_server/policies/: BUILD  README.md  certs.rs  pes.rs  policy.rs
avs_server/policies/development/: BUILD  policy.textproto
avs_server/policies/encrypted_zone/: BUILD  policy.textproto
avs_server/policies/private_aratea_server/: policy.textproto
avs_server/policies/prober/: policy.textproto
avs_server/proto/: BUILD  attestation_verification.proto  policy.proto
avs_server/proto_rust/: BUILD  build.rs
avs_server/proto_rust/src/: lib.rs
avs_server/src/: c2sp_policy.txt  ca.rs  certs.rs  config.rs  csr.rs  lib.rs  main.rs  server.rs
avs_server/testdata/: BUILD  redacted_evidence.binarypb  redacted_evidence.textproto  vcek_milan.crt
avs_server/tests/: avs_server_lib_test.rs  c2sp_policy_test.rs
resources/pcit_root_certs/prod/pes-cert/public/0/: root_certificate.pem
scripts/: update_checksums.sh
