#
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

"""oak/attestation-verification-service"""

module(
    name = "attestation-verification-service",
    version = "0.0.1",
)

bazel_dep(name = "protobuf", version = "31.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_rust_prost", version = "0.68.0")
bazel_dep(name = "tar.bzl", version = "0.6.0")
bazel_dep(name = "toolchains_protoc", version = "0.5.0")
bazel_dep(name = "googleapis", version = "0.0.0-20251211-05f65958")
single_version_override(
    module_name = "googleapis",
    version = "0.0.0-20251111-659ea6e9",
)

single_version_override(
    module_name = "rules_apple",
    version = "3.16.0",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "confidential-federated-compute",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = "f58c289b3ccb28895ad8ca408ac366e709037088e8b5c28aca18212adc18c31e",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20250618/sysroot.tar.xz"],
)

bazel_dep(name = "toolchains_llvm", version = "1.6.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain_with_custom_sysroot",
    llvm_version = "20.1.0",
)
llvm.sysroot(
    name = "llvm_toolchain_with_custom_sysroot",
    label = "@confidential-federated-compute//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain_with_custom_sysroot")

register_toolchains("@llvm_toolchain_with_custom_sysroot//:all")

# Register the Rust toolchain.
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.86.0"],  # Same as harvest_rustc_linux.
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

register_toolchains(
    "@//:prost_toolchain",
    "@//:proto_toolchain",
)

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "env_logger",
    version = "0.11.8",
)
crate.spec(
    package = "log",
    version = "0.4.29",
)
crate.spec(
    package = "prost",
    version = "0.14.1",
)
crate.spec(
    default_features = False,
    package = "prost-types",
    version = "0.14.1",
)
crate.spec(
    package = "protoc-gen-prost",
    version = "0.5.0",
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.spec(
    package = "protoc-gen-tonic",
    version = "0.5.0",
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)
crate.spec(
    features = [
        "full",
        "macros",
    ],
    package = "tokio",
    version = "1.36.0",
)
crate.spec(
    features = ["transport"],
    package = "tonic",
    version = "0.14.2",
)
crate.spec(
    package = "tonic-prost",
    version = "0.14.2",
)
crate.spec(
    package = "rcgen",
    version = "0.14.7",
)
crate.spec(
    features = ["pem"],
    package = "x509-cert",
    version = "0.2",
)
crate.spec(
    features = [
        "p256",
        "rsa",
        "sha2",
        "x509",
        "pem",
    ],
    package = "x509-verify",
    version = "0.4.8",
)
crate.spec(
    features = [
        "full",
        "macros",
    ],
    package = "tokio",
    version = "1.36.0",
)
crate.spec(
    features = ["transport"],
    package = "tonic",
    version = "0.14.2",
)
crate.spec(
    package = "tonic-prost",
    version = "0.14.2",
)
crate.spec(
    package = "thiserror",
    version = "1.0",
)
crate.spec(
    package = "async-trait",
    version = "0.1",
)
crate.spec(
    package = "glob",
    version = "0.3.3",
)
crate.from_specs(
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:cargo-bazel-lock.json",
)
use_repo(crate, "crates")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:68db2bf2b975ff277c9b2b569c327e47e2824e2c143f4dfe7c4027b15ff2f931",
    image = "gcr.io/distroless/cc-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_cc", "distroless_cc_linux_amd64", "distroless_cc_linux_arm64")

bazel_dep(name = "boringssl", version = "0.20250415.0")
archive_override(
    module_name = "boringssl",
    patches = [
        "//third_party/boringssl:boringssl.patch",
    ],
    sha256 = "b2d64c4d52c505d60b0fb86833568dc4762445910d7a7757ff9b172e5556cb01",
    strip_prefix = "boringssl-0.20250415.0",
    urls = ["https://github.com/google/boringssl/releases/download/0.20250415.0/boringssl-0.20250415.0.tar.gz"],
)

# TODO: b/496109194 - Delete dependencies introduced to AVS repo specifically for Oak.
bazel_dep(name = "oak", version = "0.0.0")
archive_override(
    module_name = "oak",
    sha256 = "cdb90bfb63916a827a6768b624a3a293a506d83929eea3b40afcde3fe3628f8b",
    strip_prefix = "oak-a9f7d9ccaa7cb670ec013e724e5618a70af95858",
    url = "https://github.com/project-oak/oak/archive/a9f7d9ccaa7cb670ec013e724e5618a70af95858.tar.gz",
)

oak_aliased_crates = use_extension(
    "@oak//bazel/crates:extensions.bzl",
    "aliased_crates_repository",
)
use_repo(oak_aliased_crates, "oak_crates_index")

bazel_dep(name = "tca-sdk", version = "0.0.0")
local_path_override(
    module_name = "tca-sdk",
    path = "third_party/tca-sdk",
)

bazel_dep(name = "pcit_api", version = "0.0.0")
local_path_override(
    module_name = "pcit_api",
    path = "third_party/tca-sdk/api",
)
